Refonte resultat+add ref

--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -155,7 +155,7 @@ rank},
 
 @Article{Ghil_02_SSA,
   Title                    = {Advanced spectral methods for climatic time series},
-  Author                   = {Ghil, Michael and Allen, MR and Dettinger, MD and Ide, K and Kondrashov, D and Mann, ME and Robertson, Andrew W and Saunders, A and Tian, Y and Varadi, F and others},
+  Author                   = {Ghil, M. and Allen, M.R. and Dettinger, M.D. and Ide, K. and Kondrashov, D. and Mann, M.E. and Robertson, A.W. and Saunders, A. and Tian, Y. and Varadi, F.},
   Journal                  = {Reviews of geophysics},
   Year                     = {2002},
   Number                   = {1},
