Dernière modifs de NV

--- a/grouping.tex
+++ b/grouping.tex
@@ -30,8 +30,8 @@
 \makeatother
 \def\HH{\mathcal H}
 
-\resumefrancais{Cet article introduit différentes stratégies de groupement automatique pour les composantes issues d'une analyse du spectre singulier (SSA). Cette étape, cruciale à la reconstruction de composantes haut niveau, permet de séparer les différentes dynamiques présentes dans un signal. Plusieurs stratégies  sont comparées dans un cadre d'évaluation unifié afin de mettre en lumière les spécificités de chacune.}
-\resumeanglais{This paper introduce several automatic grouping strategies for Singular Spectrum Analysis (SSA) components. This step is useful to retrieve meaningful insight about the temporal dynamics of the series. An unifying framework is proposed to evaluate and compare the efficiency of different methods.}
+\resumefrancais{Cet article introduit différentes stratégies de groupement automatique pour les composantes issues d'une analyse du spectre singulier (SSA). Cette étape, cruciale à la reconstruction de composantes haut niveau, permet de séparer les différentes dynamiques présentes dans un signal. De nouvelles stratégies sont comparées aux méthodes de la litterature dans un cadre d'évaluation unifié afin de mettre en lumière les spécificités de chacune.}
+\resumeanglais{This paper introduce several automatic grouping strategies for Singular Spectrum Analysis (SSA) components. This step is useful to retrieve meaningful insight about the temporal dynamics of the series. A unifying framework is proposed to evaluate and compare the efficiency of different methods.}
 
 
 \newcommand{\R}{\mathbb R}
@@ -55,7 +55,7 @@ L'analyse du spectre singulier (en anglais SSA : Singular Spectral Analysis) est
 Elle est principalement utilisée en finance ou en météorologie où les séries étudiées sont souvent courtes et bruitées.
 De nombreuses publications ont montré la pertinence de la SSA dans ces contextes, où cette décomposition permet d'apporter de l'information sur les mécanismes produisant ces séries mais aussi de formuler des modèles de prédiction.
 %Cette approche peut aussi s'interpréter comme une technique de décomposition en dictionnaires empiriques.
-%Les propriétés particulières de chaque élément dudicitonnaire peuvent données d'intéressantes informations sur la série de base.
+%Les propriétés particulières de chaque élément du dicitonnaire peuvent données d'intéressantes informations sur la série de base.
 Néanmoins, cette technique a été rarement utilisée sur d'autres signaux, principalement à cause de son manque d'automatisation.
 La pertinence des décompositions obtenues dépend en effet énormément du regroupement des composantes extraites, et résoudre cette tâche de façon manuelle peut s'avérer laborieux.
 Dans cet article, nous proposons un cadre permettant l'évaluation et la comparaison de différentes stratégies de regroupement automatique (existantes et originales).
@@ -355,7 +355,7 @@ Il est en effet difficile de retrouver les composantes avec une amplitude faible
         %\hspace{-.5cm}
         \includegraphics[width=.5\textwidth]{img/artsig3.eps}
         %\vspace{-.4cm}
-        \caption{Décomposition d'un signal artificiel (\emph{haut}). Les quatres composantes du milieu correspondent aux groupes formés après la SSA par (HG)-(MH). Le signal du bas correspond au résiduel de la décomposition. On notera que les échelles des quatres signaux du bas ont été adaptées pour ne pas écraser les signaux.} %Le regroupement retrouve correctement plusieurs composantes harmoniques. Le bruits est largement filtré du signal de départ. Il n'est pas totalement gaussien car il intègre une composante harmonique du signal de départ qui n'est pas séparée par la décomposition du fait de sa trop faible amplitude.}
+        \caption{Décomposition d'un signal artificiel (\emph{haut}). Les quatre composantes du milieu correspondent aux groupes formés après la SSA par (HG)-(MH). Le signal du bas correspond au résiduel de la décomposition. On notera que les échelles des quatre signaux du bas ont été adaptées pour ne pas écraser les signaux.} %Le regroupement retrouve correctement plusieurs composantes harmoniques. Le bruits est largement filtré du signal de départ. Il n'est pas totalement gaussien car il intègre une composante harmonique du signal de départ qui n'est pas séparée par la décomposition du fait de sa trop faible amplitude.}
         \label{fig:dec}
     \end{figure}
 
@@ -363,11 +363,11 @@ Il est en effet difficile de retrouver les composantes avec une amplitude faible
 %R_r 17.91%
 %P_r 50.57%
 %S_r 46.16%
-Les méthodes ont été testées sur 100 signaux pour chacune des 3 classes, et les résultats moyennés sont reportés dans le Tableau \ref{tab:res}.
+Les méthodes ont été testées sur 1000 signaux pour chacune des 3 classes, et les résultats moyennés sont reportés dans le Tableau \ref{tab:res}.
 Pour la métrique $R_r$ calculées sur l'ensemble de la base de signaux tests (3 classes), l'utilisation de la méthode (HG)-(MH) donne un résultat statistiquement meilleur (au sens du test de Friedman) que les autres méthodes avec une amélioration moyenne de 48.4\%.
 Pour $P_r$ et $S_r$, la méthode (KM) est statistiquement meilleure que les autres.
 Elle permet d'obtenir une amélioration moyenne de $P_r$ de 80.4\% et de 63.9\% pour $S_r$.
-L'estimation du nombre de composantes précise dans (KM) explique la précision largement meilleur que les autres ce qui se traduit aussi dans $S_r$.
+L'estimation du nombre de composantes précise dans (KM) explique la précision largement meilleure que les autres, ce qui se traduit aussi dans $S_r$.
 
 %4/ Méthode par méthode
 
@@ -389,13 +389,13 @@ $S_r$ - MH & 0.361 & 0.389 & 0.373 & 0.592 & \textbf{0.639} & 0.437\\\hline
 
 Un autre effet mis en évidence par cette comparaison est l'apport de (MH) par rapport à (MU).
 On voit que le choix n'a que très peu d'impact sur les performances des méthodes basées sur la corrélation et pour (KM).
-Pour les méthodes basées sur l'étude du périodogramme autre que (KM), l'utilisation de (MH) apporte presque toujours un avantage sauf pour le rappel de (HGS). 
-Cependant, dans ce cas, les resultats sont tout de même équivalent.
+Pour les méthodes basées sur l'étude du périodogramme autre que (KM), l'utilisation de (MH) améliore les résultat sauf pour le rappel de (HGS). 
+Cependant, dans ce cas, les résultats des deux méthodes sont statistiquement équivalant.
 Il est donc intéressant d'utiliser cette stratégie pour le groupement automatique.
 
 %3/ Classes par classes
 \begin{sloppypar}
-Lorsqu'on les résultats uniquement sur la classe 1, on observe que (HG)-(MH) est statistiquement équivalente en rappel à (HGS)-(MU) et (HGS)-(MH). 
+On observe pour la classe 1 que (HG)-(MH) est statistiquement équivalente en rappel à (HGS)-(MU) et (HGS)-(MH). 
 Pour les deux autres métriques, (HG)-(MH) et (HGS)-(MH) sont équivalentes et donnent un meilleur score que (KM).
 Ces deux similarité sont particulièrement adaptées à la reconstruction d'harmonique pure ce qui explique leurs performances sur la classe 1. 
 Pour les spectres très concentrés, elles donnent des résultats similaires ce qui explique leur proximité.
@@ -406,8 +406,9 @@ Pour les classes 2 et 3, (KM) est équivalente à (HGS)-(MH) pour $R_r$ et stati
 %Ceci montre que si la méthode (HG)-(MH) semble la plus appropriée pour le groupement automatique pour des signaux composés d'harmoniques modulées, les autres méthodes peuvent donner des résultats intéressants pour des signaux avec des périodogrammes moins compacts.
 
 %5/ Par composantes
-Cette analyse est étayée par l'étude des résultats pour chaque type de composantes.
-Le coefficient de détermination $r^2$ moyen obtenu pour la composante $c_0$ dans les classes 2 et 3 est en probabilité plus grand avec la méthode (KM) que pour les dix autres méthodes (cette méthode ne varie pas avec le choix de la stratégie de formation des groupes). 
+%Cette analyse est étayée par l'étude des résultats pour chaque type de composantes.
+L'analyse de résultats sur chaque type de composante explique en parti ces observations.
+Le coefficient de détermination $r^2$ moyen obtenu pour la composante $c_0$ dans les classes 2 et 3 est en probabilité plus grand avec la méthode (KM) que pour les autres méthodes. 
 Cette méthode observe l'intégralité du contenu fréquentiel pour effectuer le groupement ce qui est un avantage pour retrouver la composante de tendance qui peut avoir un périodogramme plus étalée. 
 Pour les composantes harmoniques dans les classes 1 et 2, la méthode (HGS)-(MH) donne statistiquement un meilleur score $r^2$ sauf pour (HG)-(MH). 
 Ces composantes sont particulièrement adaptées à la similarité basée sur leurs périodogrammes car ils ne sont composés que d'un pic.
@@ -415,9 +416,9 @@ Pour les composantes exponentiellement modulées, toutes les méthodes donnent d
 \end{sloppypar}
 
 Le cadre général introduit pour la comparaison des stratégies de regroupement permet de voir que la stratégie de regroupement à choisir est dépendante de l'importance donnée à l'extraction de chaque type de composantes.
-L'utilisation de la stratégie (MH) proposée pour la formation des groupes une légère amélioration des performances.
-La méthode (KM) apparaît comme adaptative est permet une estimation précise du nombre de composantes.
-Ces résultats prometteurs sont en cours d'adaptation pour l'étude de signaux physiologiques d'oculométrie.
+La méthode (KM) apparaît comme la plus adaptative et permet une estimation précise du nombre de composantes.
+L'utilisation de la stratégie (MH) proposée pour la formation des groupes permet une légère amélioration des performances.
+Ces résultats prometteurs sont en cours d'adaptation pour l'extraction de phases oscillantes dans des signaux physiologiques d'oculométrie.
 
 
 \bibliographystyle{plain} 
